[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/main/puzzle/piece/piece-manager.gd" type="Script" id=3]
[ext_resource path="res://assets/main/puzzle/move.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/main/puzzle/levelup.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/main/puzzle/rotate0.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/main/puzzle/rotate1.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/main/puzzle/lock.wav" type="AudioStream" id=8]
[ext_resource path="res://src/main/puzzle/PuzzleTileMap.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/main/puzzle/piece/states/prelock.gd" type="Script" id=11]
[ext_resource path="res://src/main/puzzle/piece/FrameInput.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/main/puzzle/piece-sfx.gd" type="Script" id=13]
[ext_resource path="res://src/main/puzzle/piece/states/game-ended.gd" type="Script" id=14]
[ext_resource path="res://src/main/puzzle/stretch-map.gd" type="Script" id=15]
[ext_resource path="res://src/main/puzzle/piece/states/prespawn.gd" type="Script" id=16]
[ext_resource path="res://src/main/puzzle/piece/states/none.gd" type="Script" id=17]
[ext_resource path="res://src/main/puzzle/piece/states/move-piece.gd" type="Script" id=18]
[ext_resource path="res://src/main/state-machine.gd" type="Script" id=19]
[ext_resource path="res://src/main/puzzle/piece/states/wait-for-playfield.gd" type="Script" id=20]
[ext_resource path="res://src/main/puzzle/top-out.gd" type="Script" id=21]
[ext_resource path="res://assets/main/puzzle/squish.wav" type="AudioStream" id=23]

[node name="PieceManager" type="Control"]
margin_left = 364.0
margin_top = 28.0
margin_right = 688.0
margin_bottom = 572.0
rect_clip_content = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" parent="." instance=ExtResource( 9 )]
position = Vector2( 0, -96 )

[node name="StretchMap" parent="." instance=ExtResource( 9 )]
position = Vector2( 0, -96 )
script = ExtResource( 15 )

[node name="States" type="Node" parent="."]
script = ExtResource( 19 )

[node name="None" type="Node" parent="States"]
script = ExtResource( 17 )

[node name="Prespawn" type="Node" parent="States"]
script = ExtResource( 16 )

[node name="MovePiece" type="Node" parent="States"]
script = ExtResource( 18 )

[node name="Prelock" type="Node" parent="States"]
script = ExtResource( 11 )

[node name="WaitForPlayfield" type="Node" parent="States"]
script = ExtResource( 20 )

[node name="TopOut" type="Node" parent="States"]
script = ExtResource( 21 )

[node name="GameEnded" type="Node" parent="States"]
script = ExtResource( 14 )

[node name="PieceSfx" type="Node" parent="."]
script = ExtResource( 13 )

[node name="Rotate0Sound" type="AudioStreamPlayer" parent="PieceSfx"]
stream = ExtResource( 6 )
volume_db = -4.0
bus = "Sound Bus"

[node name="Rotate1Sound" type="AudioStreamPlayer" parent="PieceSfx"]
stream = ExtResource( 7 )
volume_db = -4.0
bus = "Sound Bus"

[node name="MoveSound" type="AudioStreamPlayer" parent="PieceSfx"]
stream = ExtResource( 4 )
volume_db = -4.0
bus = "Sound Bus"

[node name="LockSound" type="AudioStreamPlayer" parent="PieceSfx"]
stream = ExtResource( 8 )
bus = "Sound Bus"

[node name="SquishSound" type="AudioStreamPlayer" parent="PieceSfx"]
stream = ExtResource( 23 )
bus = "Sound Bus"

[node name="LevelUpSound" type="AudioStreamPlayer" parent="PieceSfx"]
stream = ExtResource( 5 )
bus = "Sound Bus"

[node name="InputLeft" parent="." instance=ExtResource( 12 )]
action = "ui_left"
cancel_action = "ui_right"

[node name="InputRight" parent="." instance=ExtResource( 12 )]
action = "ui_right"
cancel_action = "ui_left"

[node name="InputCw" parent="." instance=ExtResource( 12 )]
action = "rotate_cw"

[node name="InputCcw" parent="." instance=ExtResource( 12 )]
action = "rotate_ccw"

[node name="InputSoftDrop" parent="." instance=ExtResource( 12 )]
action = "soft_drop"

[node name="InputHardDrop" parent="." instance=ExtResource( 12 )]
action = "hard_drop"
[connection signal="das_moved_left" from="." to="PieceSfx" method="_on_PieceManager_das_moved_left"]
[connection signal="das_moved_right" from="." to="PieceSfx" method="_on_PieceManager_das_moved_right"]
[connection signal="initial_das_moved_left" from="." to="PieceSfx" method="_on_PieceManager_initial_das_moved_left"]
[connection signal="initial_das_moved_right" from="." to="PieceSfx" method="_on_PieceManager_initial_das_moved_right"]
[connection signal="initial_rotated_left" from="." to="PieceSfx" method="_on_PieceManager_initial_rotated_left"]
[connection signal="initial_rotated_right" from="." to="PieceSfx" method="_on_PieceManager_initial_rotated_right"]
[connection signal="initial_rotated_twice" from="." to="PieceSfx" method="_on_PieceManager_initial_rotated_twice"]
[connection signal="lock_cancelled" from="." to="PieceSfx" method="_on_PieceManager_lock_cancelled"]
[connection signal="lock_started" from="." to="PieceSfx" method="_on_PieceManager_lock_started"]
[connection signal="moved_left" from="." to="PieceSfx" method="_on_PieceManager_moved_left"]
[connection signal="moved_right" from="." to="PieceSfx" method="_on_PieceManager_moved_right"]
[connection signal="rotated_left" from="." to="PieceSfx" method="_on_PieceManager_rotated_left"]
[connection signal="rotated_right" from="." to="PieceSfx" method="_on_PieceManager_rotated_right"]
[connection signal="squish_moved" from="." to="PieceSfx" method="_on_PieceManager_squish_moved"]
[connection signal="entered_state" from="States" to="." method="_on_States_entered_state"]
